--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,6 @@
 <!--home.wxml-->
 <text class="pink">home.wxml</text>
 <button size="mini">click</button>
+
+<text>02知识点</text>
+<text>xiixixixixixi</text>
